# neotwin

./: .gitignore  Changelog.txt  Makefile.in  README.md  aclocal.m4  build-package-ntwin.sh  build-package-twin.sh  configure  configure.ac  twin-current.lsm  twinrc  twtheme
clients/: Makefile.am  Makefile.in  cuckoo.c  dialog.c  dm.c  findtwin.c  lsmsgport.c  lsobj.c  pty.c  sendmsg.c  term.c
clients/mapscrn/: Makefile.in
contrib/: Makefile.in
contrib/twcd/: Makefile.in
docs/: Makefile.in  NEOTWIN_INSTRUCTIONS.md  NEOTWIN_PLAN.md
include/: Makefile.in  config.h.in
include/Tutf/: Makefile.in
include/Tw/: Makefile.in
libs/: Makefile.in
libs/libltdl/: Makefile.in
libs/libtstl/: Makefile.in
libs/libtutf/: Makefile.in
libs/libtw/: Makefile.in
server/: Makefile.am  Makefile.in  builtin.cpp  display.cpp  hw_multi.cpp  main.cpp  ntwstart  pty.cpp  rcparse.h  rcrun.cpp  resize.cpp  term_backend.cpp  term_backend.h  theme.cpp  theme.h  tterm.cpp  tty.cpp  tty.h  util.cpp  wm.cpp  wrapper.c
server/hw/: Makefile.in  hw_display.cpp  hw_tty.cpp
test/: Makefile.am  Makefile.in
